DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2010-07-03 patrick     Improved Cocoa support. Submitted by Doug McCorkle.
                       NEW VERSION: 3.1.1
2010-06-19 patrick     VR Juggler 3.0 branch created.
                       NEW VERSION: 3.1.0